Customize for TAFFO

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: TAFFO
+subtitle: Tuning Assistant for Floating-Point to Fixed-Point Optimization
 ---
+
+TAFFO is an autotuning framework which tries to replace floating-point operations with fixed-point operations as much as possible.
+
+It is developed and maintained at <a href="https://heaplab.deib.polimi.it/" target="_blank">HEAPLab</a>, <a href="https://www.polimi.it/" target="_blank">Politecnico di Milano</a>.
