Big buttons in homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@ title: TAFFO
 subtitle: Tuning Assistant for Floating-Point to Fixed-Point Optimization
 ---
 
+<p>
 TAFFO is an autotuning framework which tries to replace floating-point operations with fixed-point operations as much as possible.
+</p>
 
-It is developed and maintained at <a href="https://heaplab.deib.polimi.it/" target="_blank">HEAPLab</a>, <a href="https://www.polimi.it/" target="_blank">Politecnico di Milano</a>.
+<div class="centered">
+    <a class="btn btn-success btn-lg get-started-btn" href="/getstarted">Get Started with TAFFO</a>
+</div>
+
+<p>
+TAFFO is developed and maintained at <a href="https://heaplab.deib.polimi.it/" target="_blank">HEAPLab</a>, <a href="https://www.polimi.it/" target="_blank">Politecnico di Milano</a>.
+</p>
+<div class="centered">
+    <a class="btn btn-primary btn-lg get-started-btn" href="/people">Meet our team!</a>
+</div>
