--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ TAFFO is an autotuning framework which tries to replace floating-point operation
 </div>
 
 <p>
-TAFFO is developed and maintained at <a href="https://heaplab.deib.polimi.it/" target="_blank">HEAPLab</a>, <a href="https://www.polimi.it/" target="_blank">Politecnico di Milano</a> in collaboration with <a href="https://www.napier.ac.uk/" target="_blank">Edinburgh Napier University</a>.
+TAFFO is developed and maintained at <a href="https://heaplab.deib.polimi.it/" target="_blank">HEAPLab</a>, <a href="https://www.polimi.it/" target="_blank">Politecnico di Milano</a> in collaboration with <a href="https://www.ntnu.edu" target="_blank">NTNU</a>.
 </p>
 <div class="centered">
     <a class="btn btn-primary btn-lg get-started-btn" href="/people">Meet our team!</a>
